--- a/TourAgency_/Views/MainWindow/ChildViews/TourListView/ToursListView.xaml
+++ b/TourAgency_/Views/MainWindow/ChildViews/TourListView/ToursListView.xaml
@@ -17,15 +17,12 @@
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition Width="7*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <ScrollViewer
-            x:Name="ListView"
-            Grid.Column="0"
-            Grid.ColumnSpan="2"
-            Grid.Row="1"
-            Width="auto"
-            Height="auto"
-            VerticalScrollBarVisibility="Auto">
-            <ListView ItemsSource="{Binding ToursList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+
+            <ListView ItemsSource="{Binding ToursList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                      Grid.Row="1"
+                      Grid.Column="0"
+                      Grid.ColumnSpan="2"
+                      ScrollViewer.VerticalScrollBarVisibility="Auto">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <WrapPanel Orientation="Vertical">
@@ -53,12 +50,11 @@
                 </ListView.ItemTemplate>
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <WrapPanel></WrapPanel>
-                    </ItemsPanelTemplate>
+                        <UniformGrid Columns="3" />
+                </ItemsPanelTemplate>
                 </ListView.ItemsPanel>
             </ListView>
 
-        </ScrollViewer>
         <Button Margin="12"
                 Grid.Row="0"
                 Grid.Column="0"
