--- a/TourAgency_/Views/MainWindow/MainWindow.xaml
+++ b/TourAgency_/Views/MainWindow/MainWindow.xaml
@@ -7,8 +7,10 @@
         xmlns:toursListView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.TourListView"
         xmlns:addTourView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.AddTourView"
         xmlns:tourInfoView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.TourInfoView"
-
+        xmlns:createRequestView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.CreateRequestView"
+        xmlns:clientRequestView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.ClientRequestsView"
         mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance Type=local:MainWindowViewModel}"
         Title="MainWindow" Height="720" Width="1280">
     <Window.Resources>
         <ResourceDictionary>
@@ -20,6 +22,12 @@
             </DataTemplate>
             <DataTemplate DataType="{x:Type tourInfoView:TourInfoViewModel}">
                 <tourInfoView:TourInfoView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type createRequestView:CreateRequestViewModel}">
+                <createRequestView:CreateRequestView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type clientRequestView:ClientRequestsViewModel}">
+                <clientRequestView:ClientRequestsView/>
             </DataTemplate>
         </ResourceDictionary>
     </Window.Resources>
@@ -91,11 +99,13 @@
                         Grid.Column="0"
                         Grid.Row="1">
                 <Button Margin="10"
-                        Height="40">
+                        Height="40"
+                        Command="{Binding ToursList}">
                     <TextBlock Text="Туры"/>
                 </Button>
                 <Button Margin="10"
-                        Height="40">
+                        Height="40"
+                        Command="{Binding RequestsList}">
                     <TextBlock Text="Заявки"/>
                 </Button>
             </StackPanel>
